--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,4 @@ wasm-bindgen-test = "0.2"
 opt-level = "s"
 
 [package.metadata.wasm-pack.profile.release]
-wasm-opt = ["-Oz", "--enable-mutable-globals"]
+wasm-opt = false
